Clean DAP support
Signed-off-by: azerr <azerr@redhat.com>